bugfix repo link

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <span>PERT-Estimation</span>
     <span class="spacer"></span>
     <button mat-button (click)="helpSidebar.toggle()">Help</button>
-    <a href="https://github.com/valentin-vogel" mat-button>Github</a>
+    <a href="https://github.com/valentin-vogel/estimate" mat-button>Github</a>
   </mat-toolbar>
   <mat-drawer-container class="drawer-container">
     <mat-drawer #helpSidebar class="help-sidebar" mode="side">
